--- a/vues/views/src/Navbar.css
+++ b/vues/views/src/Navbar.css
@@ -62,18 +62,17 @@
 }
 .user-icon {
     font-size: 1.5rem;
-    color: var(--theme-color); /* Use your theme color */
+    color: var(--theme-color); 
     cursor: pointer;
     margin-left: 10px;
   }
-  /* Navbar.css */
 .logo {
     display: flex;
     align-items: center;
   }
   
   .logo-image {
-    width: 40px; /* Adjust size as needed */
+    width: 40px; 
     height: auto;
     margin-right: 10px;
   }
